# CommandBlock

./: Cargo.toml  README.md
.github/workflows/: testing.yml
src/: lib.rs  reader.rs  types.rs
src/db/: mod.rs  reader.rs
src/nbt/: mod.rs  reader.rs  types.rs  writer.rs
tests/: db_reader_test.rs  manipulation_test.rs  reader_test.rs  writer_test.rs
tests/data/db/: 000005.ldb  000043.ldb  000044.ldb  000045.ldb  LOG.old  MANIFEST-000004
