[package]
name = "commandblock"
version = "0.5.0"
authors = ["Jake 'PIXL' Evans", "Valink Solutions"]
edition = "2021"

description = "A library providing utilities for working with Minecraft data."
repository = "https://github.com/Valink-Solutions/CommandBlock"
documentation = "https://docs.rs/commandblock"
readme = "README.md"
license = "GPL-3.0-only"

keywords = ["minecraft", "nbt", "bedrock", "java", "data"]
categories = ["data-structures", "parsing", "utilities"]

[features]
serde = ["dep:serde"]
# bedrock_db = ["dep:leveldb"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
flate2 = "1.0.26"
serde = { version = "1.0", optional = true }

# leveldb = { version = "0.8.6", optional = true }
leveldb = { version = "0.8.6" }
db-key = "0.0.5"
rusty-leveldb = "2.0.0"
miniz_oxide = "0.7.1"

[dev-dependencies]
flate2 = "1.0.26"
serde = { version = "1.0", features = ["derive"] }
